# Shouss-de-Radio

./: .gitignore  Cargo.toml  README.md
apps/web/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
apps/web/src/: styles.css
apps/web/src/app/: App.tsx
apps/web/src/audio/: radio-worklet.js
apps/web/src/protocol/: audioPacket.ts  types.ts
apps/web/src/workers/: radio-worker.ts
crates/radio-core/: Cargo.toml
crates/radio-core/src/: lib.rs
crates/radio-server/: Cargo.toml
crates/radio-server/src/: main.rs
docs/: architecture.md  protocol.md  sync-model.md
