[workspace]
members = [
  "crates/radio-core",
  "crates/radio-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
radio-core = { path = "crates/radio-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", default-features = false, features = ["flac", "pcm", "wav"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
